k8s/messageQueue.yaml
# ------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  name: mq-service
spec:
  ports:
    - name: amqp
      port: 5672
    - name: management
      port: 15672
  selector:
    app: rabbitmq
  clusterIP: None

---
# ----------------- StatefulSet ----------------- #
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq-statefulset
spec:
  serviceName: "mq-service"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.13-management-alpine
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-storage
              mountPath: /var/lib/rabbitmq
              subPath: rabbitmq-data
  
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nhn-block-storage
        resources:
          requests:
            storage: 2Gi
